# memoctopus-mvp

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TEST_RESULTS.md  docker-compose.local.yml  docker-compose.yml  test_export_sample.docx
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md  general-feedback.md
.github/workflows/: build.yml  ci.yml  semantic.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  auth.py  csrf.py  database.py  entrypoint.sh  main.py  mock_services.py  models.py  pyproject.toml
backend/db/migrations/: 20251110143000_create_better_auth_tables.sql  20251110143452_create_prompts_table.sql  20251110145950_add_user_prompt_favorites.sql  20251113000000_create_history_entries_table.sql  20251113000001_add_csrf_token_to_session.sql
backend/routers/: export.py  history.py  prompts.py
backend/tests/: conftest.py  test_issue_60_timeout.py  test_issue_61_json_error.py  test_issue_62_empty_transcription.py  test_issue_62_transcription_service.py  test_issue_63_nemo_freeze.py  test_issue_65_vllm_auth.py
docs/: authentik-setup.md  index.md
frontend/: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  README.md  biome.json  components.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: auth-components.tsx  navbar.tsx
frontend/lib/: auth-client.ts  auth.ts
nginx/: nginx-init.conf  nginx.conf
transcription/: Dockerfile  main.py
(+191 files in other folders)
